feat: implement and register handler
